Commit de INDEX y GITIGNORE

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,35 @@ _plantillaweb/index.html
 _plantillaweb/css/estilos.css
 _plantillaweb/css/resets/normalize.css
 _plantillaweb/css/resets/reset.css
+practicaBlockInline/css/resets/reset.css
+practicaBlockInline/index.html
+practicaBlockInline/css/estilos.css
+practicaBlockInline/css/resets/normalize.css
+practicabanner/index.html
+practicabanner/montana.html
+practicabanner/css/estilos.css
+practicabanner/css/resets/normalize.css
+practicabanner/css/resets/reset.css
+practicabanner/img/escritorio/banner_delfin.jpg
+practicaimagenes/index.html
+practicaimagenes/css/estilos.css
+practicaimagenes/css/resets/normalize.css
+practicaimagenes/css/resets/reset.css
+practicaimagenes/img/escritorio/banner_delfin_escritorio.jpg
+practicaimagenes/img/escritorio/banner_zorro_escritorio.jpg
+practicaBlockInline/index.html
+practicaBlockInline/css/estilos.css
+practicaBlockInline/css/resets/normalize.css
+practicaBlockInline/css/resets/reset.css
+practicabanner/index.html
+practicabanner/montana.html
+practicabanner/css/estilos.css
+practicabanner/css/resets/normalize.css
+practicabanner/css/resets/reset.css
+practicabanner/img/escritorio/banner_delfin.jpg
+practicaimagenes/index.html
+practicaimagenes/css/estilos.css
+practicaimagenes/css/resets/normalize.css
+practicaimagenes/css/resets/reset.css
+practicaimagenes/img/escritorio/banner_delfin_escritorio.jpg
+practicaimagenes/img/escritorio/banner_zorro_escritorio.jpg
